[package]
name = "nannou-sketches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.18"
nannou_egui = "0.5"
rand = "0.8"
geocoding = "0.4"
#reqwest = "0.11.13"
reqwest = { version = "0.11.13", features = ["blocking"] }
simple-xml = "0.1.10"

[profile.dev]
debug = 0
