[package]
name = "nannou-sketches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#async-std = "1.10.0"
nannou = "0.18"
nannou_egui = "0.5"
nannou_osc = "0.18"
rand = "0.8"
reqwest = { version = "0.11.13", features = ["blocking"] }
simple-xml = "0.1.10"
palette = { version = "0.5", default-features = false, features = ["named"] }

[profile.dev]
debug = 0
